# SharedSectionDLL

./: CMakeLists.txt
ReaderProgram/: CMakeLists.txt
ReaderProgram/Source/: ReaderProgram.cpp
SharedSectionDLL/: CMakeLists.txt
SharedSectionDLL/Source/: SharedSectionDLL.cpp  SharedSectionDLL.hpp
WriterProgram/: CMakeLists.txt
WriterProgram/Source/: WriterProgram.cpp
